2003-03-03  Thorsten Kukuk  <kukuk@suse.de>

	* lib/access.c (is_valid): Don't deny access if map does not
	exist (else the error code is wrong).

2003-02-05  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.8

	* lib/ypserv_conf.c (load_ypserv_conf): Fix debug output.

	* ypserv/server.c (ypproc_xfr_2_svc): Increase children before we
	fork, to make sure the variable will not become negative in
	sig_child.

	* lib/access.c (is_valid): If connection is refused, print status
	for debugging purpose.

	* lib/securenets.c (load_securenets): Fix debug output.

2003-02-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* yphelper/yphelper.c: Fix compiler warning.

	* ypxfr/ypxfr_xdr.c: Fix compiler warning.

2003-02-04  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.7

	* ypserv/Makefile.am (DEFS): Add MAX_CHILDREN define.

	* ypserv/ypserv.c (sig_child): Readd old sig handler for checking
	number of running children.

	* configure.in: Check only for gdbm library.

	* ypserv/server.c (ypproc_all_2_svc): fork for sending data to
	client.

	* etc/Makefile.am: Require automake 1.7
	* scripts/Makefile.am: Likewise.

	* lib/Makefile.am: Require automake 1.7, rename CFLAGS to AM_CFLAGS
	* makedbm/Makefile.am: Likewise
	* mknetid/Makefile.am: Likewise
	* revnetgroup/Makefile.am: Likewise
	* rpc.yppasswdd/Makefile.am: Likewise
	* rpc.ypxfrd/Makefile.am: Likewise
	* yphelper/Makefile.am: Likewise
	* yppush/Makefile.am: Likewise
	* ypserv/Makefile.am: Likewise
	* ypxfr/Makefile.am: Likewise

2003-01-17  Thorsten Kukuk  <kukuk@suse.de>

	* ypserv/ypserv.8.in: Remove -b/--dns option

2002-10-28  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.6

	* lib/yp_db.c: Make number of max. open file handles configureable.
	* lib/ypserv_conf.c: max. number of cached_filehandles is 255.
	* rpc.ypxfrd/ypxfrd.c: set cached_filehandles to 0 after loading
	config file, rpc.ypxfrd should not cache file handles.
	* ypserv/ypserv.c (sig_hup): Don't allow to decrease the max. number