@@ -1,3 +1,8 @@
+2003-05-15  Thorsten Kukuk  <kukuk@suse.de>
+
+	* ypserv/server.c (ypproc_all_2_svc): Set at first result->more to
+	TRUE or the client will not read the error code.
+
 2003-03-03  Thorsten Kukuk  <kukuk@suse.de>
 
 	* lib/access.c (is_valid): Don't deny access if map does not
